src/test/ui/nll/ty-outlives/projection-where-clause-env-wrong-bound.stderr
error[E0309]: the associated type `<T as MyTrait<'a>>::Output` may not live long enough
  --> $DIR/projection-where-clause-env-wrong-bound.rs:15:5
   |
LL |     bar::<T::Output>()
   |     ^^^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `<T as MyTrait<'a>>::Output: 'a`...
   = note: ...so that the type `<T as MyTrait<'a>>::Output` will meet its required lifetime bounds...
note: ...that is required by this bound
  --> $DIR/projection-where-clause-env-wrong-bound.rs:29:8
   |
LL |     T: 'a,
   |        ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0309`.
